# tutorials

./: .gitignore  README.md
2022/06/rundeck-recipe-repository/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  rundeck_sample_definition_create_project_on_sonarcloud.yaml  setup.cfg
2022/06/rundeck-recipe-repository/rundeck_recipe_repository/: asgi.py  settings.py  urls.py  wsgi.py
2022/06/rundeck-recipe-repository/rundeck_recipe_repository/executor/: apps.py
2022/06/rundeck-recipe-repository/rundeck_recipe_repository/executor/management/commands/: add_repository_sonar_cloud.py
2022/06/rundeck-recipe-repository/tests/executor/management/commands/: test_add_repository_sonar_cloud.py
2022/11/n8n-playground/: .env.development  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
2022/11/n8n-playground/random_backend/: asgi.py  settings.py  urls.py  wsgi.py
2022/11/n8n-playground/random_backend/apps/core/: admin.py  apps.py  models.py
2022/11/n8n-playground/random_backend/support/: django_helpers.py
2022/11/n8n-playground/scripts/: start-development.sh
2022/11/n8n-playground/scripts/docker-entrypoint-initdb.d/: initialize-database.sh
2022/11/n8n-playground/tests/: test_views.py
2022/11/n8n-playground/workflows/: Inform_abandoned_carts.json  Purchase_webhook.json  Queue_sniffer.json
2023/06/load-testing-unleash-locust/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
2023/06/load-testing-unleash-locust/database-dump/: unleash-db.dump.sql
2023/06/load-testing-unleash-locust/iac/: 0-db-dump.yaml  1-db-deployment.yaml  2-unleash-deployment.yaml  3-locust-master-deployment.yaml  4-locust-worker-deployment.yaml  kind-config.yaml
2023/06/load-testing-unleash-locust/load_testing_unleash_locust/: locustfile.py
2023/06/load-testing-unleash-locust/load_testing_unleash_locust/common/: feature_management.py  settings.py
2023/06/load-testing-unleash-locust/load_testing_unleash_locust/user_clients/: unleash_client.py
2023/06/load-testing-unleash-locust/scripts/: start-development-locust.sh
2023/06/load-testing-unleash-locust/tests/: test_proxy.py
2023/06/load-testing-unleash-locust/tests/common/: test_feature_management.py
2023/07/django-gunicorn-gevent/: .env.development  Dockerfile  README.md  docker-compose.yml  gunicorn_config_patch_all.py  gunicorn_config_patch_almost_all.py  gunicorn_config_patch_nothing.py  healthcheck.py  manage.py  pyproject.toml  setup.cfg
2023/07/django-gunicorn-gevent/django_gunicorn_gevent/: middlewares.py  settings.py  urls.py  wsgi.py
2023/07/django-gunicorn-gevent/django_gunicorn_gevent/apps/core/: apps.py  models.py  views.py
2023/07/django-gunicorn-gevent/scripts/: load-database-call.sh  load-http-and-database-calls.sh  load-http-call.sh  load-route-that-does-10-other-requests.sh  start-development.sh  start-patch_all.sh  start-patch_almost_all.sh  start-patch_nothing.sh
2023/07/django-gunicorn-gevent/tests/: test_views.py
2024/03/watchdog-k8s/: .dockerignore  README.md  kind-config.yaml  manage.py  pyproject.toml
2024/03/watchdog-k8s/k8s/: certs.yaml  cronjob.yaml
2024/03/watchdog-k8s/scripts/: start-tests.sh
2024/03/watchdog-k8s/watchdog_k8s/: handler.py
2024/06/account_management_with_clef_ethereum/: README.md  account_operations.py  clean.sh  docker-compose.yml  pyproject.toml
2024/06/account_management_with_clef_ethereum/account-manager/: masterseed.json
2024/06/account_management_with_clef_ethereum/account-manager/keystore/: 25815-pass.txt  646a9-pass.txt  UTC--2024-05-30T21-30-23.388457648Z--25815ef1c6eb80d88a5e31412022b8870b7b1c43  UTC--2024-05-30T21-31-02.131044750Z--646a916f656f39e1efa98d4d8eba2bbdb7c6779b
2024/06/account_management_with_clef_ethereum/consensus/: config.yml
2024/06/account_management_with_clef_ethereum/execution/: genesis.json  history
2025/02/rabbitmq-alternate-exchange-policy/: .env  README.md  configure_alternate_exchange.py  consumer.py  docker-compose.yaml  publisher.py  pyproject.toml  settings.py  test_publisher.py
2025/02/rabbitmq-alternate-exchange-policy/custom-rabbitmq-conf/: rabbitmq.conf
2025/02/rabbitmq-alternate-exchange-policy/scripts/: start-create-alternate-exchange-environment.sh  start-delete-queue.sh  start-publish-messages-indefinitely.sh
2025/05/elasticsearch-o11y-ilm/: .env  .terraform.lock.hcl  README.md  docker-compose.o11y-stack.yaml  docker-compose.setup.yaml  docker-compose.yaml  kind-config.yaml  pyproject.toml  start.sh
2025/05/elasticsearch-o11y-ilm/apm-server/: Dockerfile
2025/05/elasticsearch-o11y-ilm/apm-server/config/: apm-server.yml
2025/05/elasticsearch-o11y-ilm/elastic_o11y_ilm/: data_stream_deletion.py  metrics_payload_template.json  migrate_indices.py  send_metrics.py  shard_report.py
2025/05/elasticsearch-o11y-ilm/elastic_o11y_ilm/index_lifecycles/: README.md  cold-1-migrate.json  cold-2-complete.json  delete-1-wait-for-shard-history-leases.json  delete-2-check-ts-end-time-passed.json  delete-3-not-found.json  hot.json  warm-1-migrate.json  warm-2-complete.json
2025/05/elasticsearch-o11y-ilm/elasticsearch/: Dockerfile
2025/05/elasticsearch-o11y-ilm/elasticsearch/config/: elasticsearch.yml
2025/05/elasticsearch-o11y-ilm/iac/: main.tf  providers.tf  variables.tf
2025/05/elasticsearch-o11y-ilm/k8s/: elastic-agent-secret.yaml  elastic-agent-values.yaml  kube-state-metrics-values.yaml  letter-b.yaml  metrics-server-values.yaml  otel-collector-apps-secret.yaml  otel-collector-apps-values.yaml  storage-snapshot.yaml
2025/05/elasticsearch-o11y-ilm/kibana/config/: kibana.yml
2025/05/elasticsearch-o11y-ilm/setup/: keystore.sh  setup-certs.sh  setup-keystore.sh
XXXX/auth0-fluentd-load-testing/: .env  Dockerfile.dev  docker-compose.yml  pyproject.toml
XXXX/auth0-fluentd-load-testing/auth0_fluentd_load_testing/: locustfile.py
XXXX/auth0-fluentd-load-testing/auth0_fluentd_load_testing/common/: settings.py  support.py
XXXX/auth0-fluentd-load-testing/scripts/: start-development-locust.sh  start-locust.sh
XXXX/auth0-liquid-tester/: Gemfile  (+4 more)
(+850 files in other folders)
