[tool.poetry]
name = "watchdog-k8s"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
### Logging
python-json-logger = "*"
### Tooling
kubernetes = "^29.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pre-commit = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = ["**/migrations/*.py"]
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1

[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | settings.py
  )/
)
'''
