[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "*"
elasticsearch-dsl = "*"
opentelemetry-exporter-otlp = "*"
faker = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
line_length = 120
py_version = 312
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1
